tests/NormalTests/paczka1/fuzzy1/67446790.err
Error in line 1: 3Vf A541 31,2
Error in line 27: xEpY8dITjN A478 88,3
Error in line 30: xEpY8dITjN A362 69,0
Error in line 37: YBG3 S321 89,1
